--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "description": "",
   "scripts": {
     "dev": "parcel ./static/index.html",
-    "build": "parcel build ./static/index.html"
+    "build": "parcel build ./static/index.html",
+    "lint": "npx eslint ./ --fix"
   },
   "keywords": [],
   "author": "Boris",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.4.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "express": "^4.17.1",
     "parcel": "*",
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
-    "postcss-url": "^10.1.3"
+    "postcss-url": "^10.1.3",
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "handlebars": "^4.7.7"
