--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,33 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
-  
+
   "plugins": [
     "@typescript-eslint/eslint-plugin"
   ],
   "rules": {
-    "max-len": [2, 100]
+    "max-len": [2, 140],
+    "no-underscore-dangle": "off",
+    "class-methods-use-this": "off",
+    "import/prefer-default-export": "off",
+    "no-console": "off",
+    "consistent-this": [2, "self",  "vm"],
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+   ]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     }
-} 
+  }
+}
