--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "uuid": "^8.3.2"
   }
 }
