--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,7 @@
   "noUnusedLocals": true,
   "noUnusedParameters": true,
   "sourceMap": true,
-  "strictNullChecks": true 
+  "strictNullChecks": true,
+  "include": ["./src/declaration.d.ts"],
+  "esModuleInterop": true, 
 }
