--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
     "import/prefer-default-export": "off",
+    "no-param-reassign": 0,
+    "no-use-before-define": 0,
     "no-console": "off",
     "consistent-this": [2, "self",  "vm"],
     "import/extensions": [
