--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "author": "Boris",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.4.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
-    "express": "^4.17.1",
     "parcel": "*",
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
@@ -25,7 +25,9 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "handlebars": "^4.7.7",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "express": "^4.17.1"
   }
 }
