--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
-  "noImplicitAny": true,
-  "noUnusedLocals": true,
-  "noUnusedParameters": true,
-  "sourceMap": true,
-  "strictNullChecks": true,
-  "include": ["./src/declaration.d.ts"],
-  "esModuleInterop": true, 
+  "compilerOptions": {
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "sourceMap": true,
+    "strictNullChecks": true,
+    "esModuleInterop": true,
+  },
+  
 }
