--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,11 @@
     "no-use-before-define": 0,
     "import/no-mutable-exports": 0,
     "no-console": "off",
+    "no-continue": "off",
+    "no-restricted-syntax": "off",
+    "no-return-assign": "off",
+    "@typescript-eslint/no-array-constructor": "off",
+    "@typescript-eslint/no-unused-vars": "off",
     "consistent-this": [2, "self",  "vm"],
     "import/extensions": [
       "error",
