--- a/package.json
+++ b/package.json
@@ -5,29 +5,38 @@
   "scripts": {
     "dev": "parcel ./index.html",
     "build": "parcel build ./index.html",
+    "test": "./node_modules/.bin/mocha --require ts-node/register",
     "lint": " eslint ./ --fix"
   },
   "keywords": [],
   "author": "Boris",
   "license": "ISC",
   "devDependencies": {
+    "@babel/register": "^7.17.0",
+    "@babel/runtime": "^7.17.2",
+    "@types/chai": "^4.3.0",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
-    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.0",
+    "babel-core": "^6.26.3",
+    "chai": "^4.3.6",
     "eslint": "^8.4.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
+    "mocha": "^9.2.1",
     "parcel": "*",
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
     "postcss-url": "^10.1.3",
+    "ts-node": "^10.6.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "uuid": "^8.3.2",
     "express": "^4.17.1",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "uuid": "^8.3.2"
   }
 }
