--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "parcel ./index.html",
     "build": "parcel build ./index.html",
-    "test": "./node_modules/.bin/mocha --require ts-node/register",
+    "test": "./node_modules/.bin/mocha --project ./src/test/tsconfig.json",
     "lint": " eslint ./ --fix"
   },
   "keywords": [],
@@ -16,7 +16,9 @@
     "@babel/runtime": "^7.17.2",
     "@types/chai": "^4.3.0",
     "@types/express": "^4.17.13",
+    "@types/jsdom": "^16.2.14",
     "@types/mocha": "^9.1.0",
+    "@types/sinon": "^10.0.11",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
@@ -26,11 +28,15 @@
     "eslint": "^8.4.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "19.0.0",
+    "jsdom-global": "3.0.2",
     "mocha": "^9.2.1",
     "parcel": "*",
     "postcss": "^8.3.11",
     "postcss-import": "^14.0.2",
     "postcss-url": "^10.1.3",
+    "sinon": "^13.0.1",
     "ts-node": "^10.6.0",
     "typescript": "^4.5.2"
   },
