--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "target": "es2015",
     "moduleResolution": "node",
     "noImplicitAny": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "sourceMap": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
