--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "chats",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "My webpack project",
   "scripts": {
-    "dev": "parcel ./index.html",
-    "build": "parcel build ./index.html",
+    "dev": "webpack --mode=development --node-env=development",
+    "build": "webpack --mode=production --node-env=production",
+    "watch": "webpack --mode=development --watch --node-env=development",
+    "start": "webpack-dev-server --mode=development --open",
     "test": "./node_modules/.bin/mocha --project ./src/test/tsconfig.json",
     "lint": " eslint ./ --fix"
   },
@@ -12,8 +14,6 @@
   "author": "Boris",
   "license": "ISC",
   "devDependencies": {
-    "@babel/register": "^7.17.0",
-    "@babel/runtime": "^7.17.2",
     "@types/chai": "^4.3.0",
     "@types/express": "^4.17.13",
     "@types/jsdom": "^16.2.14",
@@ -22,23 +22,32 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "@webpack-cli/generators": "^2.4.2",
     "autoprefixer": "^10.4.0",
     "babel-core": "^6.26.3",
     "chai": "^4.3.6",
+    "css-loader": "^6.7.1",
     "eslint": "^8.4.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "19.0.0",
     "jsdom-global": "3.0.2",
+    "mini-css-extract-plugin": "^2.6.0",
     "mocha": "^9.2.1",
-    "parcel": "*",
-    "postcss": "^8.3.11",
-    "postcss-import": "^14.0.2",
-    "postcss-url": "^10.1.3",
+    "prettier": "^2.6.2",
     "sinon": "^13.0.1",
+    "style-loader": "^3.3.1",
+    "svg-url-loader": "^7.1.1",
+    "ts-loader": "^9.3.0",
     "ts-node": "^10.6.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.7.2",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0",
+    "workbox-webpack-plugin": "^6.5.3"
   },
   "dependencies": {
     "express": "^4.17.1",
