--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,15 @@
 {
-  "ts-node": {
-    "files": true
-   },
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2015",
-    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "esModuleInterop": true,
+    "module": "es6",
+    "target": "es5",
+    "allowJs": true,
+    "moduleResolution": "node",
   },
-  "include": ["src/test/**/*", "src/declaration.d.ts"]
+  "files": ["src/index.ts"],
+  "include": ["src/declaration.d.ts"],
+    "exclude": [
+        "node_modules"
+    ]
 }
