--- a/package.json
+++ b/package.json
@@ -10,48 +10,54 @@
     "test": "./node_modules/.bin/mocha --project ./src/test/tsconfig.json",
     "lint": " eslint ./ --fix"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "echo \"[Husky] pre-commit\""
+    }
+  },
   "keywords": [],
   "author": "Boris",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "^4.3.0",
-    "@types/express": "^4.17.13",
-    "@types/jsdom": "^16.2.14",
-    "@types/mocha": "^9.1.0",
-    "@types/sinon": "^10.0.11",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
-    "@webpack-cli/generators": "^2.4.2",
-    "autoprefixer": "^10.4.0",
-    "babel-core": "^6.26.3",
-    "chai": "^4.3.6",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.4.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "ignore-styles": "^5.0.1",
+    "@types/chai": "4.3.0",
+    "@types/express": "4.17.13",
+    "@types/jsdom": "16.2.14",
+    "@types/mocha": "9.1.0",
+    "@types/sinon": "10.0.11",
+    "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "5.5.0",
+    "@typescript-eslint/parser": "5.5.0",
+    "@webpack-cli/generators": "2.4.2",
+    "autoprefixer": "10.4.0",
+    "babel-core": "6.26.3",
+    "chai": "4.3.6",
+    "css-loader": "6.7.1",
+    "eslint": "8.4.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.25.3",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.1",
+    "ignore-styles": "5.0.1",
     "jsdom": "19.0.0",
     "jsdom-global": "3.0.2",
-    "mini-css-extract-plugin": "^2.6.0",
-    "mocha": "^9.2.1",
-    "prettier": "^2.6.2",
-    "sinon": "^13.0.1",
-    "style-loader": "^3.3.1",
-    "svg-url-loader": "^7.1.1",
-    "ts-loader": "^9.3.0",
-    "ts-node": "^10.6.0",
-    "typescript": "^4.7.2",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0",
-    "workbox-webpack-plugin": "^6.5.3"
+    "mini-css-extract-plugin": "2.6.0",
+    "mocha": "9.2.1",
+    "prettier": "2.6.2",
+    "sinon": "13.0.1",
+    "style-loader": "3.3.1",
+    "svg-url-loader": "7.1.1",
+    "ts-loader": "9.3.0",
+    "ts-node": "10.6.0",
+    "typescript": "4.7.2",
+    "webpack": "5.72.1",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.9.0",
+    "workbox-webpack-plugin": "6.5.3"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "handlebars": "^4.7.7",
-    "uuid": "^8.3.2"
+    "express": "4.17.1",
+    "handlebars": "4.7.7",
+    "uuid": "8.3.2"
   }
 }
