--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "webpack --mode=development --watch --node-env=development",
     "start": "webpack-dev-server --mode=development --open",
     "test": "./node_modules/.bin/mocha --project ./src/test/tsconfig.json",
-    "lint": " eslint ./ --fix"
+    "lint": " eslint ./ "
   },
   "keywords": [],
   "author": "Boris",
@@ -57,7 +57,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "echo \"[Husky] pre-commit\""
+      "pre-commit": "npm-run-all test lint"
     }
   }
 }
