--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsdom-global": "3.0.2",
     "mini-css-extract-plugin": "2.6.0",
     "mocha": "9.2.1",
+    "npm-run-all": "4.1.5",
     "prettier": "2.6.2",
     "sinon": "13.0.1",
     "style-loader": "3.3.1",
@@ -57,7 +58,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all test lint"
+      "pre-commit": "npm-run-all test lint",
+      "pre-push": "npm run test"
     }
   }
 }
