--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@typescript-eslint/parser": "5.5.0",
-    "@webpack-cli/generators": "2.4.2",
+    "@webpack-cli/generators": "^2.5.0",
     "autoprefixer": "10.4.0",
     "babel-core": "6.26.3",
     "chai": "4.3.6",
