--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "workbox-webpack-plugin": "6.5.3"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "4.17.1",
     "handlebars": "4.7.7",
     "uuid": "8.3.2"
