--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "webpack --mode=development --node-env=development",
     "build": "webpack --mode=production --node-env=production",
     "watch": "webpack --mode=development --watch --node-env=development",
-    "start": "webpack-dev-server --mode=development --open",
+    "start": "webpack-dev-server --mode=development --open --port=3000",
     "test": "./node_modules/.bin/mocha --project ./src/test/tsconfig.json",
     "lint": " eslint ./ ",
     "prepare": "husky install"
@@ -23,7 +23,7 @@
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@typescript-eslint/parser": "5.5.0",
-    "@webpack-cli/generators": "^2.5.0",
+    "@webpack-cli/generators": "2.5.0",
     "autoprefixer": "10.4.0",
     "babel-core": "6.26.3",
     "chai": "4.3.6",
@@ -33,7 +33,7 @@
     "eslint-plugin-import": "2.25.3",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.5.0",
-    "husky": "^8.0.0",
+    "husky": "8.0.0",
     "ignore-styles": "5.0.1",
     "jsdom": "19.0.0",
     "jsdom-global": "3.0.2",
