--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "prettier": "2.6.2",
     "sinon": "13.0.1",
     "style-loader": "3.3.1",
+    "stylelint": "14.9.1",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-standard": "26.0.0",
     "svg-url-loader": "7.1.1",
     "ts-loader": "9.3.0",
     "ts-node": "10.6.0",
