--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "target": "es5",
     "allowJs": true,
     "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "sourceMap": true,
+    "strictNullChecks": true,
   },
   "files": ["src/index.ts"],
   "include": ["src/declaration.d.ts"],
